# hackathone-todo-phase-3

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  vercel.json
.specify/memory/: constitution.md
backend/: Dockerfile  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_title_to_tasks_table.py
backend/src/: chat.py  main.py
backend/src/api/: auth.py  tasks.py
backend/src/core/: config.py  database.py  security.py
backend/src/models/: __init__.py  models.py  task.py  user.py
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useAuth.ts  useTasks.ts
history/prompts/001-fullstack-todo-app/: 002-create-fullstack-todo-spec.spec.prompt.md  003-create-implementation-plan.plan.prompt.md  004-generate-implementation-tasks.tasks.prompt.md  005-build-phase-2-dashboard-tasks-ui.green.prompt.md  006-fix-async-get-session-dependency.red.prompt.md  007-verify-database-url-start-backend.red.prompt.md  008-start-postgres-with-docker.general.prompt.md
history/prompts/constitution/: 001-initialize-phase-2-constitution.constitution.prompt.md
history/prompts/general/: 0001-phase-2-task-analysis.general.prompt.md  0002-tsconfig-alias-compat.general.prompt.md  (+7 more)
specs/: phase-3-chatbot.md
specs/001-fullstack-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+11 files in other folders)
